--- a/selectors_exercise/example.html
+++ b/selectors_exercise/example.html
@@ -4,9 +4,15 @@
 	<meta charset="UTF-8" />
 	<title>CSS Selectors</title>
 	<link rel="stylesheet" href="styles.css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 <body>
+	<script>$(document).ready(function(){
+			
 
+	});
+	</script>
 	<header>&lt;header&gt;
 		<h1>&lt;h1&gt;CSS Selectors&lt;/h1&gt;</h1>
 		<div class="note">&lt;div class=&quot;note&quot;&gt;This page demonstrates <strong>&lt;strong&gt;CSS Selectors&lt;/strong&gt;</strong>&lt;/div&gt;</div>
@@ -49,4 +55,4 @@
 						<script src="myscript.js"></script>
 
 					</body>
-					</html>
+					</html
