--- a/advanced_exercise/index.html
+++ b/advanced_exercise/index.html
@@ -4,6 +4,7 @@
 <title>SimpleBlog</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="images/SimpleBlog.css" type="text/css" />
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 <div id="wrap">
@@ -101,5 +102,32 @@
     <p> &copy; 2006 <strong>Your Company</strong> &nbsp;&nbsp; Design by: <a href="http://www.styleshout.com/">styleshout</a> | Valid: <a href="http://validator.w3.org/check/referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://all-free-download.com/free-website-templates/">Home</a>&nbsp;|&nbsp; <a href="http://all-free-download.com/free-website-templates/">Sitemap</a>&nbsp;|&nbsp; <a href="http://all-free-download.com/free-website-templates/">Home</a> </p>
   </div>
 </div>
-<div align=center>This template  downloaded form <a href='http://all-free-download.com/free-website-templates/'>free website templates</a></div></body>
+<div align=center>This template  downloaded form <a href='http://all-free-download.com/free-website-templates/'>free website templates</a></div>
+
+<script>$(document).ready(function() {
+	$("a").attr("href", "https://www.codefactory.wien");
+	$("code").css("color", "red");
+	$("ol li").css("background-color", "#2a7b90");
+	$("textarea").text("Express your opinion!????");
+	$("img").attr("src", "https://upload.wikimedia.org/wikipedia/de/thumb/5/50/DFB-Logo_1945.svg/100px-DFB-Logo_1945.svg.png");
+	$("blockquote").css({"background-color":"orange", "font-style":"italic"});
+	$("#logo").css("color", "black");
+	$(".gray").css("color", "white");
+	$(".date").empty();
+	var sm = $("<li>New Templates</li><li>Order Template</li><li>Contact Us</li>");
+	$(".sidemenu").append(sm);
+	$(":contains('Wise Words')").addClass("wise");
+	$(".wise + p").text("When someone says: 'I want a programming language in which I need only to say what I wish, and it's done,' give him a lollipop");
+
+
+});
+
+
+
+
+
+
+</script>
+
+</body>
 </html>
